--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,14 @@
 /* General Style*/
 html{
   font-size: 18px;
-  border: black solid 1px;
+  /*border: black solid 1px;*/
   /*background-color: white;*/
 }
 
 body{
   font-family: "Helvetica"; /*add ""on Helvetica*/
   line-height:1.4;/*original 1.4em*/
-  border: black solid 1px;
+  /*border: black solid 1px;*/
 
 }
 
@@ -17,18 +17,18 @@ h1{
   line-height:1.2;
   font-weight: bold;
   font-size: 2rem;
-  border: black solid 1px;
+  /*border: black solid 1px;*/
 }
 
 span{
   font-family: "Helvetica";
   font-size: 1rem;
-  border: black solid 1px;
+  /*border: black solid 1px;*/
 }
 
 div{
   display:block;
-  border: black solid 1px;
+  /*border: black solid 1px;*/
 }
 
 .container{
@@ -54,7 +54,7 @@ nav{
   justify-content: space-between;
   padding: 1rem 0px;
   /*display: block*/
-  border: black solid 1px;
+  /*border: black solid 1px;*/
 }
 
 nav div{
@@ -95,4 +95,64 @@ header .flex{
   line-height: 2.4rem;
   padding:0.75rem 5rem;
   /*border: black solid 1px;*/
+}
+
+/*Supporting Section*/
+
+.supporting{
+  display:flex;
+  justify-content:center;
+}
+
+.service{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: 3rem;
+  height: 8rem;
+  width: 5rem;
+}
+
+.service img{
+  width: 5rem;
+  margin-bottom: 1rem;
+}
+
+.service img.paper-icon{
+  width: 3.5rem;
+}
+
+/*Info Section*/
+.info{
+  width: 35%;
+  margin-right: 5%;
+  margin-bottom: 4rem;
+}
+
+.title{
+  background-color: cadetblue;
+  padding: 0.5rem 1.25rem;
+  font-weight: bold;
+  color: white;
+  max-width: 10rem;
+}
+
+.info p{
+  padding: 1rem 0;
+}
+
+/*Footer Section*/
+footer{
+  background-color: azure;
+  display: flex;
+  align-items: center;
+  padding: 4rem 2rem;
+}
+
+footer img{
+  height: 1.5rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
 }
