--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,6 +47,26 @@ header{
 
 }
 
+@media only screen and (max-width: 1024px){
+  header{
+    padding-top: 0;
+    height: 22rem;
+  }
+  nav.container{
+    max-width: 100%;
+  }
+  .main-banner{
+    padding:0.75rem 4rem;
+    margin-top: 5rem;
+    margin-right: 2rem;
+  }
+  .main-banner h1{
+    font-size: 1.33rem;
+  }
+
+
+}
+
 nav{
   background-color: cadetblue;
   color: white;
